@@ -16,7 +16,6 @@
  */
 package org.apache.mahout.classifier.df.data;
 
-
 import org.apache.mahout.common.MahoutTestCase;
 import org.junit.Test;
 
@@ -24,7 +23,6 @@ public final class DatasetTest extends MahoutTestCase {
 
   @Test
   public void jsonEncoding() throws DescriptorException {
-
     String json = "["
             + "{\"values\":null,\"label\":false,\"type\":\"numerical\"},"
             + "{\"values\":[\"foo\",\"bar\"],\"label\":false,\"type\":\"categorical\"},"
@@ -42,7 +40,7 @@ public final class DatasetTest extends MahoutTestCase {
     assertTrue(to.isNumerical(0));
 
     // from JSON
-    Dataset fromJson = new Dataset().fromJSON(json);
+    Dataset fromJson = Dataset.fromJSON(json);
     assertEquals(3, fromJson.nbAttributes());
     assertEquals(1, fromJson.getIgnored().length);
     assertEquals(2, fromJson.getIgnored()[0]);
@@ -50,6 +48,37 @@ public final class DatasetTest extends MahoutTestCase {
     
     // read values for a nominal
     assertEquals(0, fromJson.valueOf(1, "foo"));
+  }
 
+  @Test
+  public void jsonEncodingIgnoreFeatures() throws DescriptorException {
+    String json = "["
+        + "{\"values\":null,\"label\":false,\"type\":\"numerical\"},"
+        + "{\"values\":[\"foo\",\"bar\"],\"label\":false,\"type\":\"categorical\"},"
+        + "{\"values\":null,\"label\":false,\"type\":\"ignored\"},"
+        + "{\"values\":[\"Blue\",\"Red\"],\"label\":true,\"type\":\"categorical\"}"
+        + "]";
+    Dataset to = DataLoader.generateDataset("N C I L", false, new String[]{"1 foo 2 Red", "4 bar 5 Blue"});
+
+    // to JSON
+    assertEquals(json, to.toJSON());
+    assertEquals(3, to.nbAttributes());
+    assertEquals(1, to.getIgnored().length);
+    assertEquals(2, to.getIgnored()[0]);
+    assertEquals(2, to.getLabelId());
+    assertTrue(to.isNumerical(0));
+    assertEquals(0, to.valueOf(1, "foo"));
+    assertEquals(0, to.valueOf(2, "Blue"));
+
+    // from JSON
+    Dataset fromJson = Dataset.fromJSON(json);
+    assertEquals(3, fromJson.nbAttributes());
+    assertEquals(1, fromJson.getIgnored().length);
+    assertEquals(2, fromJson.getIgnored()[0]);
+    assertTrue(fromJson.isNumerical(0));
+
+    // read values for a nominal, one before and one after the ignore feature
+    assertEquals(0, fromJson.valueOf(1, "foo"));
+    assertEquals(0, fromJson.valueOf(2, "Blue"));
   }
 }
